# cider_press

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  TASK-rmsnorm-optional-gamma.md  build.rs  clippy.toml  rust-toolchain.toml
.github/workflows/: ci.yml  mlx-sync.yml
crates/cider-press/: Cargo.toml
crates/cider-press-kernels/: Cargo.toml  build.rs
crates/cider-press-kernels/src/: buffer.rs  commands.rs  device.rs  error.rs  gpu_sampler.rs  lib.rs  library.rs
crates/cider-press-kernels/src/kernels/: arg_reduce.rs  binary.rs  copy.rs  dequantize.rs  gather.rs  matmul.metal  matmul.rs  mod.rs  qmm.rs  qmv.rs  reduce.rs  rms_norm.rs  rope.rs  sdpa.rs  softmax.rs  unary.rs
crates/cider-press-kernels/tests/: alloc_slack_zeroed.rs  arg_reduce_library.rs  binary_library.rs  binary_parity.rs  copy_dtypes.rs  copy_kernel.rs  copy_parity.rs  dequantize_parity.rs  encoder_overhead_bench.rs  gather_parity.rs  gpu_sampler.rs  inline_dispatch_smoke.rs  matmul_parity.rs  qmm_dispatch_bench.rs  qmm_parity.rs  qmv_dispatch_bench.rs  qmv_parity.rs  reduce_library.rs  reduce_parity.rs  rms_norm_parity.rs  rope_parity.rs  sdpa_vector_parity.rs  softmax_parity.rs  stage1_add_one.rs  stage2_copy.rs  stage3_parity.rs  stage4_qmv.rs  stage5_perf.rs  steel_attention_parity.rs  strided_copy.rs  unary_library.rs  unary_parity.rs
crates/cider-press-kernels/tests/fixtures/: copy.safetensors  qmm_qwen2.safetensors  qmv.safetensors
crates/cider-press-models/: Cargo.toml
crates/cider-press-models/src/: chat_template.rs  error.rs  generator.rs  lib.rs  nn.rs  safetensors_io.rs  tokenizer.rs
crates/cider-press-models/src/qwen2/: attention.rs  block.rs  config.rs  mod.rs  model.rs  weights.rs
crates/cider-press-models/src/qwen3_5/: attention.rs  block.rs  config.rs  gated_deltanet.rs  mod.rs  weights.rs
crates/cider-press-models/tests/: activations.rs  attention_layer0.rs  attention_mlp_smoke.rs  binary_qwen2.rs  embed_tokens.rs  generator_parity.rs  generator_smoke.rs  linear_rmsnorm.rs  mlp_layer0.rs  profiled_prefill_smoke.rs  projections_smoke.rs  qmm_qwen2.rs  qwen2_logits.rs  qwen2_real_checkpoint.rs  qwen35_gated_attention.rs  qwen35_gated_deltanet.rs  qwen35_real_checkpoint.rs  rms_norm.rs  rope_qwen2.rs  sdpa_prefill_fused.rs  sdpa_qwen2.rs  softmax_qwen2.rs  tokenizer_parity.rs
crates/cider-press-runtime/: Cargo.toml
crates/cider-press-runtime/src/: buffer_pool.rs  device.rs  dtype.rs  error.rs  eval.rs  kv_cache.rs  layout.rs  lib.rs  pending_eval.rs  profile.rs  quantization.rs  quantized.rs  shape.rs  strides.rs  tensor.rs
crates/cider-press-runtime/tests/: binary_parity.rs  dequantize_parity.rs  gather_parity.rs  kv_cache_roundtrip.rs  matmul_parity.rs  profiling.rs  qmm_parity.rs  qmv_padded_parity.rs  qmv_parity.rs  rms_norm_op.rs  rope_parity.rs  sdpa_full_routing.rs  sdpa_parity.rs  slice_update_parity.rs  softmax_parity.rs  unary_reduce_parity.rs
crates/cider-press-test-utils/: Cargo.toml
crates/cider-press-test-utils/src/: lib.rs
crates/cider-press/src/: lib.rs  sys.rs
docs/: ARCHITECTURE.md  QWEN_PATH.md  QWEN_PERF.md  RUNTIME_DESIGN.md
docs/inference/: README.md  attention.md  embedding.md  execution-model.md  feed-forward.md  kv-cache.md  quantized-matmul.md  rmsnorm.md  rope.md  sampling.md  tokenization.md  transformer-block.md  weights-and-quantization.md
docs/inference/models/: qwen2.5.md  qwen3.6.md
docs/superpowers/plans/: 2026-05-28-branch-14-cli-greedy-decode.md  2026-05-29-perf-measurement.md  2026-06-03-strided-copy-elim-s1-decode.md  2026-06-09-fused-prefill-attention.md
docs/superpowers/specs/: 2026-05-28-branch-14-cli-greedy-decode-design.md  2026-05-29-perf-measurement-design.md  2026-06-03-strided-copy-elimination-design.md
kernels-mlx/: VENDORED.md
kernels-mlx/mlx/backend/metal/kernels/: sdpa_vector_only.metal
scripts/: dump_mlx_generate.py  dump_mlx_op.py  dump_qwen35_arch.py  dump_qwen35_fixtures.py  dump_tokenizer.py  gen_copy_fixture.py  gen_qmm_fixture.py  gen_qmv_fixture.py  gen_stage3_fixtures.py  gen_stage4_fixtures.py  measure_qmm_mlx.py  measure_qmv_mlx.py  measure_qwen_mlx.py  measure_stage5_mlx.py  profile_mlx_prefill.py  sync_mlx_kernels.sh
src/: lib.rs
tests/: stage2_copy.rs  stage3_parity.rs  stage4_qmv.rs  stage5_perf.rs
