[package]
name = "cider-press"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Cold-pressed LLM inference for Apple Silicon."
license = "MIT"
repository = "https://github.com/zheylmun/cider-press"
readme = "README.md"
keywords = ["llm", "inference", "apple-silicon", "metal", "mlx"]
categories = ["science"]

[lib]

[features]
default = []

[dependencies]
half = "=2.7.1"

[target.'cfg(target_os = "macos")'.dependencies]
# objc2-* ecosystem moves fast; pin exact for spike reproducibility.
# Default features are heavy (>60 features each) but cover everything
# the spike needs — revisit minimization once dispatch is proven.
objc2 = "=0.6.4"
objc2-foundation = "=0.3.2"
objc2-metal = "=0.3.2"

[dev-dependencies]
approx = "=0.5.1"
safetensors = "=0.7.0"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Project-specific allows. Revisit as the codebase grows.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

