[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/zheylmun/cider-press"
authors = ["Zach Heylmun"]
keywords = ["llm", "inference", "apple-silicon", "metal", "mlx"]
categories = ["science"]

[workspace.dependencies]
# Pinned exact for spike reproducibility; the objc2-* ecosystem moves
# fast. Default features on objc2-metal 0.3.x activate 60+ items and
# cover everything we need; minimization is post-spike work.
approx = "=0.5.1"
clap = { version = "=4.5.21", features = ["derive"] }
half = "=2.7.1"
minijinja = "=2.5.0"
objc2 = "=0.6.4"
objc2-foundation = "=0.3.2"
objc2-metal = "=0.3.2"
safetensors = "=0.7.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
tempfile = "=3.19.1"
thiserror = "=2.0.18"
# default features pull in onig (C bindings), progressbar, esaxx_fast; fancy-regex is the pure-Rust regex backend
tokenizers = { version = "=0.23.1", default-features = false, features = ["fancy-regex"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Project-specific allows. Revisit as the codebase grows.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
