[package]
name = "cider-press-models"
description = "Transformer architectures and quantized-weight loaders for cider-press."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]

[dependencies]
cider-press-runtime = { path = "../cider-press-runtime" }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
