[package]
name = "cider-press-models"
description = "Transformer architectures and quantized-weight loaders for cider-press."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]

[features]
# Enables the runtime profiling facility through this crate so model-layer
# spans (e.g. argmax) record when the crate is built with --features profiling.
profiling = ["cider-press-runtime/profiling"]

[dependencies]
cider-press-runtime = { path = "../cider-press-runtime" }
half = { workspace = true }
minijinja = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
cider-press-test-utils = { path = "../cider-press-test-utils" }
tempfile = { workspace = true }

[lints]
workspace = true
