[package]
name = "cider-press-runtime"
description = "Lazy tensor, graph, and command-buffer-batching runtime layered over cider-press-kernels."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]

[dependencies]
cider-press-kernels = { path = "../cider-press-kernels" }
half = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
safetensors = { workspace = true }

[lints]
workspace = true
