[package]
name = "cider-press-test-utils"
description = "Internal: shared helpers for cider-press MLX-parity tests."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]

[dependencies]
half = { workspace = true }
safetensors = { workspace = true }

[lints]
workspace = true
