[package]
name = "cider-press"
description = "Cold-pressed LLM inference for Apple Silicon — facade crate re-exporting the runtime and models."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]

[dependencies]
cider-press-runtime = { path = "../cider-press-runtime" }
cider-press-models = { path = "../cider-press-models" }

[lints]
workspace = true
